Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9813

QDeclarativeExpression: Attempted to evaluate an expression in an invalid context" warnings in destructor

    XMLWordPrintable

Details

    Description

      During destruction in the qml property editor of Bauhaus we get dozens of warnings about expressions in an invalid context . This is new behavior from qml.

      See Bauhaus 558

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aakenned Aaron Kennedy
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes