Compiled bindings should not print warnings where normal bindings don't

QTBUG-9813